--- a/index.html
+++ b/index.html
@@ -84,13 +84,16 @@
               <span>Show all</span>
             </div>
             <div class="trendingGridCards">
-
-              <div class="cardTrending">
-                <img src="https://charts-images.scdn.co/assets/locale_en/regional/weekly/region_global_default.jpg" alt="">
-                <a class="link" href="">
-                  <h3>Khayaal</h3>
-                </a>
-                <span>Tailwinder, NDS</span>
+              <div class="entireCard">
+                <img src="./images/play.svg" alt="playbutton">
+                
+                <div class="cardTrending">
+                  <img src="https://charts-images.scdn.co/assets/locale_en/regional/weekly/region_global_default.jpg" alt="">
+                  <a class="link" href="">
+                    <h3>Khayaal</h3>
+                  </a>
+                  <span>Tailwinder, NDS</span>
+                </div>
               </div>
 
 
@@ -99,97 +102,7 @@
 
 
 
-              <div class="cardTrending">
-                <img src="https://charts-images.scdn.co/assets/locale_en/regional/weekly/region_global_default.jpg" alt="">
-                <a class="link" href="">
-                  <h3>Khayaal</h3>
-                </a>
-                <span>Tailwinder, NDS</span>
-              </div>
-              <div class="cardTrending">
-                <img src="https://charts-images.scdn.co/assets/locale_en/regional/weekly/region_global_default.jpg" alt="">
-                <a class="link" href="">
-                  <h3>Khayaal</h3>
-                </a>
-                <span>Tailwinder, NDS</span>
-              </div>
-              <div class="cardTrending">
-                <img src="https://charts-images.scdn.co/assets/locale_en/regional/weekly/region_global_default.jpg" alt="">
-                <a class="link" href="">
-                  <h3>Khayaal</h3>
-                </a>
-                <span>Tailwinder, NDS</span>
-              </div>
-              <div class="cardTrending">
-                <img src="https://charts-images.scdn.co/assets/locale_en/regional/weekly/region_global_default.jpg" alt="">
-                <a class="link" href="">
-                  <h3>Khayaal</h3>
-                </a>
-                <span>Tailwinder, NDS</span>
-              </div>
-              <div class="cardTrending">
-                <img src="https://charts-images.scdn.co/assets/locale_en/regional/weekly/region_global_default.jpg" alt="">
-                <a class="link" href="">
-                  <h3>Khayaal</h3>
-                </a>
-                <span>Tailwinder, NDS</span>
-              </div>
-              <div class="cardTrending">
-                <img src="https://charts-images.scdn.co/assets/locale_en/regional/weekly/region_global_default.jpg" alt="">
-                <a class="link" href="">
-                  <h3>Khayaal</h3>
-                </a>
-                <span>Tailwinder, NDS</span>
-              </div>
-              <div class="cardTrending">
-                <img src="https://charts-images.scdn.co/assets/locale_en/regional/weekly/region_global_default.jpg" alt="">
-                <a class="link" href="">
-                  <h3>Khayaal</h3>
-                </a>
-                <span>Tailwinder, NDS</span>
-              </div>
-              <div class="cardTrending">
-                <img src="https://charts-images.scdn.co/assets/locale_en/regional/weekly/region_global_default.jpg" alt="">
-                <a class="link" href="">
-                  <h3>Khayaal</h3>
-                </a>
-                <span>Tailwinder, NDS</span>
-              </div>
-              <div class="cardTrending">
-                <img src="https://charts-images.scdn.co/assets/locale_en/regional/weekly/region_global_default.jpg" alt="">
-                <a class="link" href="">
-                  <h3>Khayaal</h3>
-                </a>
-                <span>Tailwinder, NDS</span>
-              </div>
-              <div class="cardTrending">
-                <img src="https://charts-images.scdn.co/assets/locale_en/regional/weekly/region_global_default.jpg" alt="">
-                <a class="link" href="">
-                  <h3>Khayaal</h3>
-                </a>
-                <span>Tailwinder, NDS</span>
-              </div>
-              <div class="cardTrending">
-                <img src="https://charts-images.scdn.co/assets/locale_en/regional/weekly/region_global_default.jpg" alt="">
-                <a class="link" href="">
-                  <h3>Khayaal</h3>
-                </a>
-                <span>Tailwinder, NDS</span>
-              </div>
-              <div class="cardTrending">
-                <img src="https://charts-images.scdn.co/assets/locale_en/regional/weekly/region_global_default.jpg" alt="">
-                <a class="link" href="">
-                  <h3>Khayaal</h3>
-                </a>
-                <span>Tailwinder, NDS</span>
-              </div>
-              <div class="cardTrending">
-                <img src="https://charts-images.scdn.co/assets/locale_en/regional/weekly/region_global_default.jpg" alt="">
-                <a class="link" href="">
-                  <h3>Khayaal</h3>
-                </a>
-                <span>Tailwinder, NDS</span>
-              </div>
+              
 
 
 
