--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Spotify</title>
+    <title>Spotify - Web Player: Music for everyone</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="utility.css" />
   </head>
@@ -38,7 +38,7 @@
             <span>Your library</span>
             <img src="./images/plus.svg" alt="plus">
           </div>
-          <section class="first bg-box">
+          <!-- <section class="first bg-box">
                         
             <h4>Create your first playlist</h2>
             <span>It's easy we will help you</span>
@@ -49,7 +49,7 @@
             <h4>Let's find some podcasts to follow</h2>
             <span>We'll keep you updated on new episodes</span>
             <span class="white-button">Browse podcasts</span>
-          </section>
+          </section> -->
           <div class="rightFooter">
             <div aria-label="Legal and privacy links">
   <ul>
@@ -97,6 +97,11 @@
               </div>
               
             </div>
+          </div>
+          <div class="playButton">
+            <img src="./images/previous.svg" alt="previous">
+            <img src="./images/playSong.svg" alt="playSong">
+            <img src="./images/forward.svg" alt="forward">
           </div>
         </div>
       </div>
