--- a/index.html
+++ b/index.html
@@ -38,6 +38,12 @@
             <span>Your library</span>
             <img src="./images/plus.svg" alt="plus">
           </div>
+
+          <div class="songsList">
+            <ul>
+             
+            </ul>
+          </div>
           <!-- <section class="first bg-box">
                         
             <h4>Create your first playlist</h2>
