--- a/index.html
+++ b/index.html
@@ -108,6 +108,9 @@
             <img src="./images/previous.svg" alt="previous">
             <img src="./images/playSong.svg" alt="playSong">
             <img src="./images/forward.svg" alt="forward">
+            <div class="seekbar">
+              <div class="circle"></div>
+            </div>
           </div>
         </div>
       </div>
