--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <main class="bg-black">
       <nav>
-        <div class="rightNav">
+        <div class="leftNav">
           <img src="./images/logo.svg" alt="logo" style="filter: invert(1)" />
           <img src="./images/home.svg" alt="home" />
           <div class="search">
@@ -18,7 +18,7 @@
             <input type="search" name="" id="" />
           </div>
         </div>
-        <div class="leftNav">
+        <div class="rightNav">
           <span>Premium</span>
           <span>Support</span>
           <span>Download</span>
@@ -32,7 +32,7 @@
         </div>
       </nav>
       <div class="container">
-        <div class="rightContainer bg-container">
+        <div class="leftContainer bg-container">
           <div class="library">
             <span>Your library</span>
             <img src="./images/plus.svg" alt="plus" />
@@ -120,10 +120,13 @@
             </div>
           </div>
         </div>
-        <div class="leftContainer bg-container">
+        <div class="rightContainer bg-container">
           <div class="trendingSongs">
             <div class="trendingSongsHeader">
-              <h2>Trending songs</h2>
+              <div class="trend">
+<img src="./images/hamburger.svg" alt="hamburger">
+                <h2>Trending songs</h2>
+              </div>
               <span>Show all</span>
             </div>
             <div class="trendingGridCards">
