--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div class="leftContainer bg-container">
           <div class="library">
             <span>Your library</span>
-            <img src="./images/plus.svg" alt="plus" />
+            <img class="close" src="./images/close.svg " alt="close" />
           </div>
 
           <div class="songsList">
@@ -110,9 +110,7 @@
             <div>
               <button type="button" aria-label="Select language">
                 <span aria-hidden="true">
-                  <!-- <svg role="img" aria-hidden="true" viewBox="0 0 16 16" width="16" height="16">
-        <path d="M8.152 16H8a8 8 0 1 1 .152 0m-.41-14.202c-.226.273-.463.713-.677 1.323-.369 1.055-.626 2.496-.687 4.129h3.547c-.06-1.633-.318-3.074-.687-4.129-.213-.61-.45-1.05-.676-1.323-.194-.235-.326-.285-.385-.296h-.044c-.055.007-.19.052-.391.296M4.877 7.25c.062-1.771.34-3.386.773-4.624q(.148-.427.329-.806)a6.51 6.51 0 0 0-4.436 5.43zm-3.334 1.5a6.51 6.51 0 0 0 4.436 5.43 8 8 0 0 1-.33-.806c-.433-1.238-.71-2.853-.772-4.624zm4.835 0c.061 1.633.318 3.074.687 4.129.214.61.451 1.05.677 1.323.202.244.336.29.391.297l.044-.001c(.06-.01.19-.061.385-.296).226-.273.463-.713(.676-1.323).37-1.055.626-2.496.687-4.129zm5.048 0c-.061 1.771-.339 3.386-.772 4.624q(.123.353-.268.674)a6.5 6.5 0 0 0 4.071-5.298zm3.031-1.5a6.51 6.51 0 0 0-4.071-5.298q(.145.322.268.674)c(.433 1.238.711 2.853.772 4.624z"></path>
-      </svg> -->
+               
                   <img src="./images/globe.svg" alt="globe" />
                 </span>
                 <span>English</span>
@@ -124,7 +122,7 @@
           <div class="trendingSongs">
             <div class="trendingSongsHeader">
               <div class="trend">
-<img src="./images/hamburger.svg" alt="hamburger">
+                <img class="hamburger" src="./images/hamburger.svg" alt="hamburger" />
                 <h2>Trending songs</h2>
               </div>
               <span>Show all</span>
@@ -135,16 +133,112 @@
 
                 <div class="cardTrending">
                   <img
-                    src="https://charts-images.scdn.co/assets/locale_en/regional/weekly/region_global_default.jpg"
+                    src="./images/ab67616d00001e02673219ce701db80780e48020.jfif"
                     alt=""
                   />
                   <a class="link" href="">
-                    <h3>Khayaal</h3>
+                    <h3>Dhurandhar Title Track</h3>
                   </a>
                   <span>Tailwinder, NDS</span>
                 </div>
               </div>
+
+
+
+
+                <div class="entireCard">
+                <img src="./images/play.svg" alt="playbutton" />
+
+                <div class="cardTrending">
+                  <img
+                    src="./images/ab67616d00001e02673219ce701db80780e48020.jfif"
+                    alt=""
+                  />
+                  <a class="link" href="">
+                    <h3>Dhurandhar Title Track</h3>
+                  </a>
+                  <span>Tailwinder, NDS</span>
+                </div>
+              </div>
+               <div class="entireCard">
+                <img src="./images/play.svg" alt="playbutton" />
+
+                <div class="cardTrending">
+                  <img
+                    src="./images/ab67616d00001e02673219ce701db80780e48020.jfif"
+                    alt=""
+                  />
+                  <a class="link" href="">
+                    <h3>Dhurandhar Title Track</h3>
+                  </a>
+                  <span>Tailwinder, NDS</span>
+                </div>
+              </div> <div class="entireCard">
+                <img src="./images/play.svg" alt="playbutton" />
+
+                <div class="cardTrending">
+                  <img
+                    src="./images/ab67616d00001e02673219ce701db80780e48020.jfif"
+                    alt=""
+                  />
+                  <a class="link" href="">
+                    <h3>Dhurandhar Title Track</h3>
+                  </a>
+                  <span>Tailwinder, NDS</span>
+                </div>
+              </div> <div class="entireCard">
+                <img src="./images/play.svg" alt="playbutton" />
+
+                <div class="cardTrending">
+                  <img
+                    src="./images/ab67616d00001e02673219ce701db80780e48020.jfif"
+                    alt=""
+                  />
+                  <a class="link" href="">
+                    <h3>Dhurandhar Title Track</h3>
+                  </a>
+                  <span>Tailwinder, NDS</span>
+                </div>
+              </div> <div class="entireCard">
+                <img src="./images/play.svg" alt="playbutton" />
+
+                <div class="cardTrending">
+                  <img
+                    src="./images/ab67616d00001e02673219ce701db80780e48020.jfif"
+                    alt=""
+                  />
+                  <a class="link" href="">
+                    <h3>Dhurandhar Title Track</h3>
+                  </a>
+                  <span>Tailwinder, NDS</span>
+                </div>
+              </div> <div class="entireCard">
+                <img src="./images/play.svg" alt="playbutton" />
+
+                <div class="cardTrending">
+                  <img
+                    src="./images/ab67616d00001e02673219ce701db80780e48020.jfif"
+                    alt=""
+                  />
+                  <a class="link" href="">
+                    <h3>Dhurandhar Title Track</h3>
+                  </a>
+                  <span>Tailwinder, NDS</span>
+                </div>
+              </div>
+
+
+
+
             </div>
+
+
+
+
+ 
+
+
+
           </div>
           <div class="playbar">
             <div class="seekbar">
@@ -152,7 +246,7 @@
             </div>
             <div class="aboveBar">
               <div class="songinfo"></div>
-              
+
               <div class="playButton">
                 <img id="previous" src="./images/previous.svg" alt="previous" />
                 <img id="play" src="./images/playSong.svg" alt="playSong" />
