--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                 <img class="hamburger" src="./images/hamburger.svg" alt="hamburger" />
                 <h2>Trending songs</h2>
               </div>
-              <span>Show all</span>
+              <!-- <span>Show all</span> -->
             </div>
             <div class="trendingGridCards">
               <div class="entireCard">
