previous and next button

--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
               <div class="playButton">
                 <img id="previous" src="./images/previous.svg" alt="previous" />
                 <img id="play" src="./images/playSong.svg" alt="playSong" />
-                <img id="forward" src="./images/forward.svg" alt="forward" />
+                <img id="next" src="./images/forward.svg" alt="forward" />
               </div>
               <div class="songtime"></div>
             </div>
