--- a/index.html
+++ b/index.html
@@ -252,7 +252,14 @@
                 <img id="play" src="./images/playSong.svg" alt="playSong" />
                 <img id="next" src="./images/forward.svg" alt="forward" />
               </div>
-              <div class="songtime"></div>
+              <div class="timevol">
+
+                <div class="songtime"></div>
+                <div class="volume">
+                  <img src="./images/fullVolume.svg" alt="full volume icon">
+                  <input type="range" name="volume" id="">
+                </div>
+              </div>
             </div>
           </div>
         </div>
