cards playlist update

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
               <!-- <span>Show all</span> -->
             </div>
             <div class="trendingGridCards">
-              <div class="entireCard">
+              <div data-folder="mcs" class="entireCard">
                 <img src="./images/play.svg" alt="playbutton" />
 
                 <div class="cardTrending">
@@ -136,93 +136,24 @@
                     src="./images/ab67616d00001e02673219ce701db80780e48020.jfif"
                     alt=""
                   />
-                  <a class="link" href="">
+                  <p>
                     <h3>Dhurandhar Title Track</h3>
-                  </a>
+                  </p>
                   <span>Tailwinder, NDS</span>
                 </div>
               </div>
 
-
-
-
-                <div class="entireCard">
+                
+                 <div data-folder="bcs" class="entireCard">
                 <img src="./images/play.svg" alt="playbutton" />
-
                 <div class="cardTrending">
                   <img
                     src="./images/ab67616d00001e02673219ce701db80780e48020.jfif"
                     alt=""
                   />
-                  <a class="link" href="">
+                 <p>
                     <h3>Dhurandhar Title Track</h3>
-                  </a>
-                  <span>Tailwinder, NDS</span>
-                </div>
-              </div>
-               <div class="entireCard">
-                <img src="./images/play.svg" alt="playbutton" />
-
-                <div class="cardTrending">
-                  <img
-                    src="./images/ab67616d00001e02673219ce701db80780e48020.jfif"
-                    alt=""
-                  />
-                  <a class="link" href="">
-                    <h3>Dhurandhar Title Track</h3>
-                  </a>
-                  <span>Tailwinder, NDS</span>
-                </div>
-              </div> <div class="entireCard">
-                <img src="./images/play.svg" alt="playbutton" />
-
-                <div class="cardTrending">
-                  <img
-                    src="./images/ab67616d00001e02673219ce701db80780e48020.jfif"
-                    alt=""
-                  />
-                  <a class="link" href="">
-                    <h3>Dhurandhar Title Track</h3>
-                  </a>
-                  <span>Tailwinder, NDS</span>
-                </div>
-              </div> <div class="entireCard">
-                <img src="./images/play.svg" alt="playbutton" />
-
-                <div class="cardTrending">
-                  <img
-                    src="./images/ab67616d00001e02673219ce701db80780e48020.jfif"
-                    alt=""
-                  />
-                  <a class="link" href="">
-                    <h3>Dhurandhar Title Track</h3>
-                  </a>
-                  <span>Tailwinder, NDS</span>
-                </div>
-              </div> <div class="entireCard">
-                <img src="./images/play.svg" alt="playbutton" />
-
-                <div class="cardTrending">
-                  <img
-                    src="./images/ab67616d00001e02673219ce701db80780e48020.jfif"
-                    alt=""
-                  />
-                  <a class="link" href="">
-                    <h3>Dhurandhar Title Track</h3>
-                  </a>
-                  <span>Tailwinder, NDS</span>
-                </div>
-              </div> <div class="entireCard">
-                <img src="./images/play.svg" alt="playbutton" />
-
-                <div class="cardTrending">
-                  <img
-                    src="./images/ab67616d00001e02673219ce701db80780e48020.jfif"
-                    alt=""
-                  />
-                  <a class="link" href="">
-                    <h3>Dhurandhar Title Track</h3>
-                  </a>
+                  </p>
                   <span>Tailwinder, NDS</span>
                 </div>
               </div>
